[package]
name = "blogr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# logging facade
log = "0.4.*"
# logger
env_logger = "0.10.*"
lazy_static = "1.4.*"
anyhow = "1.0.*"
# cli command
structopt = "0.3.*"
# markdown parser
pulldown-cmark = "0.9.*"
tera = "1.19.*"
# walking directories
walkdir = "2"
# web framework
axum = "0.6.*"
tokio = { version = "1", features = ["full"] }
hotwatch = "0.5.*"
tower-http = { version = "0.4.*", features = ["fs"] }
serde = { version = "1.0.*", features = ["derive"] }
syntect = "5"
